--- a/notes/usdrub/index.html
+++ b/notes/usdrub/index.html
@@ -33,6 +33,7 @@
                 <h1> Ищем «справедливый» курс доллара </h1>
                 <div class="meta"><p class=summary>Исходя из принципа паритета процентных ставок пробуем рассчитать «справедливый» курс доллара на текущий момент и понять, много ли мы «переплачиваем» за геополитичекую напряжённость, вкладываясь сейчас в зарубежные инструменты.</p>
                     <p> Опубликовано: <time>2022-01-30</time> </p>
+                    <p>  Обновлено: <time>2022-02-17</time> </p>
 <p>Находится в:</p>
                     <ul>
     <a href='/notes#macro'>Заметки о финансах/Макроэкономика, денежное обращение и механика рынков</a>
@@ -61,6 +62,40 @@
 <p>После нескольких итераций получим следующую динамику расчётного курса и справедливый курс на момент написания статьи примерно <strong>70руб/$</strong> (при варьировании модели, оценка колеблется в довольно узком диапазоне 68–72р/$).</p>
 <p><img src='/notes/usdrub/usdrub.svg'></p>
 <p>Наибольшая просадка рубля относительно справедливого курса была на пике нефтяных цен в 2008г — примерно 30%, и это было до введения бюджетного правила, достаточно хорошо «отвязывающего» курс от нефтегазовой конъюнктуры. Так что за свои валютные сбережения можете быть спокойны. Когда Россия вновь станет инвестиционно-привлекательной страной, сильно они в рублях не обесценятся.</p>
+<section id="ppp">
+<h3><a href="/notes/usdrub#ppp">О паритете покупательной способности и индексе Бигмака<i class=share>&#xe9cb;</i></a></h3>
+<div class="meta">
+<div>
+        Обновления:
+        <ul>
+                <li>2022-02-17: Добавлен этот раздел</li>
+        </ul>
+        </div>
+</div>
+<p>Почти одновременно с этой заметкой вышло обновление от The Economist с их оценками «справедливых» валютных курсов <a href="https://www.economist.com/big-mac-index">по индексу Бигмака</a>, согласно которому доллар должен стоить примерно <strong>23р</strong>.</p>
+<p>Прежде всего нужно отметить, что индекс Бигмака — это эрзац <a href="https://en.wikipedia.org/wiki/Purchasing_power_parity">паритета покупательной способности</a> т.к. строится по очень ограниченному кругу товаров и услуг, не сказать, что очень релевантному для потребителя. Впрочем, оценка по <a href="https://www.oecd-ilibrary.org/finance-and-investment/purchasing-power-parities-ppp/indicator/english_1290ee5a-en">настоящему ППС</a> не очень далека от этого значения — <strong>26р/$</strong>.</p>
+<p>Но при каких условиях валютные курсы будут следовать за ППС?</p>
+<p>Для этого нужно, чтобы:</p>
+<ol>
+<li>Все экономические блага (включая производственные мощности, недвижимость и человеческий труд) могли доставляться из любой точки мира в любую без ограничений, бесплатно и мгновенно.</li>
+<li>Деньги использовались бы исключительно и только для оплаты за потребительские товары и услуги, но не для накопления капитала хотя бы и ультра-краткосрочного, и не для инвестиций.</li>
+</ol>
+<p>Это совершенно нереалистичные условия, и не существует свидетельств, чтобы фактические курсы были скоррелированы с паритетом покупательной способности. В отличие от паритета процентных ставок, с которым связь достаточно жёсткая (хотя и на горизонтах порядка 5 лет) практически у всех мировых валют.</p>
+<p>Паритет покупательной способности может использоваться лишь для сопоставления реального благосостояния населения основной массы разных стран, и то очень ограниченно. Человек, привыкший жить на 5K$/мес в США (примерно 90K$/год до налогов), или 3К€/мес в Португалии или Прибалтике, едва ли согласится, что з/п 130Кр/мес в России обеспечивает ему ровно тот же уровень комфорта, хотя именно такой обменный курс диктует нам ППС.</p>
+</section>
+<section id="_3">
+<h3><a href="/notes/usdrub#_3">Т–Ж. Как курс рубля влияет на экономику России</a></h3>
+<div class="meta">
+<a href="https://journal.tinkoff.ru/rubli" target="_blank"><i class=share>&#xea7e;</i> Как курс рубля влияет на экономику России</a><div>
+        Обновления:
+        <ul>
+                <li>2022-02-02: Добавлен этот источник</li>
+        </ul>
+        </div>
+<p></div>
+Название вывернуто наизнанку, потому что статья — об экономических факторах, краткосрочно влияющих на курс рубля.
+Там же ссылка на <a href="https://journal.tinkoff.ru/media/rubli-c-pdf-01.pdf">The Profitability of Carry Trades: Reality or Illusion?</a> с указанием на краткосрочный характер прибыли кэрри-трейдеров (как оно и должно быть теоретически).</p>
+</section>
 </section>
             </div>
             <hr/>
