--- a/pages/sources.html
+++ b/pages/sources.html
@@ -58,13 +58,21 @@
 <li><a href="/pages/sources#!RoRE">The Rate of Return on Everything, 1870-2015</a></li>
 <li><a href="/pages/sources#!AAM">The Arithmetic of Active Management</a></li>
 </ul>
+<li><a href="/pages/sources#!data">Описания наборов статистических данных</a></li>
+<ul>
+<li><a href="/pages/sources#_16">Фондовый рынок</a></li>
+<li><a href="/pages/sources#_17">Товары</a></li>
+<li><a href="/pages/sources#_18">Процентные ставки</a></li>
+<li><a href="/pages/sources#_19">Инфляция</a></li>
+<li><a href="/pages/sources#_20">Курсы валют</a></li>
+</ul>
 </ul></div>
 <section id="beginwith">
 <h2><a href="/pages/sources#beginwith">С чего начать<i class=share>&#xe9cb;</i></a></h2>
 <div class="meta">
 </div>
 <ul>
-<li><a href="https://capital-gain.ru/course/">Курс от Дмитрия Никитенко</a>. Пока неоконченный, но уже внушающий огромное уважение очень детальной проработкой статей. Обещает стать лучшим источником по данной теме на русском языке.</li>
+<li><a href="https://capital-gain.ru/course/">Курс от Дмитрия Никитенко</a>. Пока неоконченный, но уже внушающий огромное уважение очень детальной проработкой статей. Обещает стать лучшим источником по данной теме на русском языке. (К сожалению, стал платным.)</li>
 <li><a href="https://rationalanswer.club/post/56/">Курс от Ильи Рослякова</a>. Обзорный, но весьма подробный, материал с практическим уклоном.</li>
 <li><a href="https://fintraining.livejournal.com/">Сергей Спирин</a>. Столп народного просвещения, цикл «Введение в инвестиции» (список в левой колонке сайта) к прочтению обязателен.</li>
 <li><a href="https://assetallocation.ru/quick-start/">Статьи и брошюры</a> об основах портфельного инвестирования, собранные им же.</li>
@@ -159,6 +167,7 @@
 <li><a href="https://www.portfoliovisualizer.com/">PortfolioVisualizer</a> — сервис для визуализации истории портфелей из выбранных классов активов или реальных акций.</li>
 <li><a href="https://www.msci.com/end-of-day-data-search">Индексы MSCI</a></li>
 <li><a href="https://stooq.com/">stooq</a> — беспрецедентно длинные ценовые ряды по основным активам и индексам.</li>
+<li><a href="https://investoramnesia.com/historical-data/">Investor Amnesia Data Library</a> — разнообразные исторические данные по финансовым рынкам</li>
 </ul>
 </section>
 </section>
@@ -234,7 +243,7 @@
 <section id="!RoRE">
 <h3><a href="/pages/sources#!RoRE">The Rate of Return on Everything, 1870-2015<i class=share>&#xe9cb;</i></a></h3>
 <div class="meta">
-<details>
+<a href="https://www.nber.org/papers/w24112" target="_blank"><i class=share>&#xea7e;</i> Внешний источник</a><details>
             <summary>Используется в:</summary>
             <ul>
                         <li><a href='/literacy/instruments/realty#_2'>Недвижимость/Арендная жилая недвижимость</a>    <button class='link-meta-anchor'>
@@ -245,13 +254,13 @@
         <span class='description'></span>
     </span></li>
             </ul>
-        </details><a href="https://www.nber.org/papers/w24112" target="_blank"><i class=share>&#xea7e;</i> Внешний источник</a></div>
+        </details></div>
 <p>Исследование о реальных и номинальных доходностях основных классов доходных активов: акций, облигаций и недвижимости практически по всем странам мира.</p>
 </section>
 <section id="!AAM">
 <h3><a href="/pages/sources#!AAM">The Arithmetic of Active Management<i class=share>&#xe9cb;</i></a></h3>
 <div class="meta">
-<details>
+<a href="https://web.stanford.edu/~wfsharpe/art/active/active.htm" target="_blank"><i class=share>&#xea7e;</i> Внешний источник</a><details>
             <summary>Используется в:</summary>
             <ul>
                         <li><a href='/literacy/zero_sum'>Рынок как игра с нулевой суммой</a>    <button class='link-meta-anchor'>
@@ -262,13 +271,94 @@
         <span class='description'>Почему активные инвесторы и спекулянты отбирают деньги друг у друга, а пассивных невозможно победить</span>
     </span></li>
             </ul>
-        </details><a href="https://web.stanford.edu/~wfsharpe/art/active/active.htm" target="_blank"><i class=share>&#xea7e;</i> Внешний источник</a></div>
+        </details></div>
 <p>Уильям Шарп о том, что активные участники рынка не могут получить доходность за счёт пассивных. <a href="https://assetallocation.ru/arithmetic-of-active-management">Перевод на русский</a> от Сергея Спирина, <a href="/literacy/zero_sum">мой математический пересказ</a>
         <button class='link-meta-anchor'><strong>i</strong></button>
         <span class='link-meta'>
             <span class='header'>Рынок как игра с нулевой суммой</span>
             <span class='description'>Почему активные инвесторы и спекулянты отбирают деньги друг у друга, а пассивных невозможно победить</span>
         </span> с комментариями.</p>
+</section>
+</section>
+<section id="!data">
+<h2><a href="/pages/sources#!data">Описания наборов статистических данных<i class=share>&#xe9cb;</i></a></h2>
+<div class="meta">
+</div>
+<section id="_16">
+<h3><a href="/pages/sources#_16">Фондовый рынок</a></h3>
+<div class="meta">
+</div>
+<ul>
+<li>Реконструированная месячная доходность SnP500 с 1871г — <a href="http://www.econ.yale.edu/~shiller/data.htm">Таблицы Шиллера</a></li>
+</ul>
+</section>
+<section id="_17">
+<h3><a href="/pages/sources#_17">Товары</a></h3>
+<div class="meta">
+</div>
+<ul>
+<li>Стоимость золота:<ul>
+<li><a href="https://www.measuringworth.com/datasets/gold/result.php">годовая</a></li>
+</ul>
+</li>
+<li>Стоимость нефти:<ul>
+<li><a href="https://data.nasdaq.com/data/BP/CRUDE_OIL_PRICES">годовая</a></li>
+<li><a href="https://stooq.com/q/a2/d/?s=cl.f&amp;i=m">месячная</a></li>
+</ul>
+</li>
+<li>Доходность корзины товарных активов — <a href="https://www.investing.com/indices/sp-gsci-commodity-total-return-historical-data">GSCI</a></li>
+</ul>
+</section>
+<section id="_18">
+<h3><a href="/pages/sources#_18">Процентные ставки</a></h3>
+<div class="meta">
+</div>
+<ul>
+<li>Доходность облигаций:<ul>
+<li>10-летних гособлигации США с 1871г — <a href="http://www.econ.yale.edu/~shiller/data.htm">Таблицы Шиллера</a></li>
+</ul>
+</li>
+<li>Доходность вкладов в РФ<ul>
+<li>В рублях:<ul>
+<li><a href="https://www.cbr.ru/statistics/avgprocstav/?UniDbQuery.Posted=True&amp;UniDbQuery.From=2.07.2009&amp;UniDbQuery.To=1.01.2022">Средняя максимальная ставка по вкладам в топ-10 банков РФ</a></li>
+<li><a href="https://www.cbr.ru/statistics/bank_sector/int_rat">Средневзвешенная ставка по вкладам в банках РФ</a>. Использовалась ставка по вкладам до одного года. С 2001г — без вкладов «до востребования». С 2014г — без вкладов в Сбербанке.</li>
+</ul>
+</li>
+<li>В долларах:<ul>
+<li>С 2011г — <a href="https://www.cbr.ru/statistics/bank_sector/int_rat">ЦБ РФ</a> (до 1 года без до востребования)</li>
+<li>2007–2010 — <a href="https://www.banki.ru/news/research/?id=2885588">обзор АСВ</a> (данные по вкладам свыше 1 года)</li>
+<li>2000–2004 — <a href="https://www.nes.ru/dataupload/files/events/bankseminar/session11/shpringel.pdf">Исследование доходности банковских депозитов и недвижимости с помощью метода векторной авторегрессии</a> (свыше 1 года)</li>
+<li>2004–2007 — найденные в интернете архивные банковские вклады</li>
+</ul>
+</li>
+</ul>
+</li>
+<li>Однодневные ставки межбанковского рынка<ul>
+<li>В РФ: до 2010г — <a href="https://www.cbr.ru/hd_base/mkr/mkr_base/?UniDbQuery.Posted=True&amp;UniDbQuery.From=13.07.2000&amp;UniDbQuery.To=12.01.2010&amp;UniDbQuery.st=SF&amp;UniDbQuery.ob=OB_MIACR_0&amp;UniDbQuery.Currency=1&amp;UniDbQuery.sk=Dd1_">MIACR</a>, после 2010г — <a href="http://ruonia.ru/archive">RUONIA</a></li>
+<li>В США — <a href="https://fred.stlouisfed.org/series/DFF">DFF</a></li>
+</ul>
+</li>
+</ul>
+</section>
+<section id="_19">
+<h3><a href="/pages/sources#_19">Инфляция</a></h3>
+<div class="meta">
+</div>
+<ul>
+<li>Индекс потребительских цен<ul>
+<li><a href="https://fred.stlouisfed.org/series/RUSCPIALLMINMEI">В РФ</a></li>
+<li>В США: до 1983 — <a href="http://www.econ.yale.edu/~shiller/data.htm">Таблицы Шиллера</a>, после 1983 — <a href="https://fred.stlouisfed.org/series/MEDCPIM094SFRBCLE">Median Consumer Price Index</a></li>
+</ul>
+</li>
+</ul>
+</section>
+<section id="_20">
+<h3><a href="/pages/sources#_20">Курсы валют</a></h3>
+<div class="meta">
+</div>
+<ul>
+<li>С 1992г — <a href="https://www.alphavantage.co/documentation/#fx-daily">AlphaVantage</a></li>
+</ul>
 </section>
 </section>
 </section>
