--- a/updates.html
+++ b/updates.html
@@ -30,7 +30,17 @@
 
         <ul>
             <li>
-                <span>2022-01-30</span>
+                <span>2022-02-17</span>
+                <a href="https://onfin.github.io/notes/usdrub#ppp">Обновлено: Ищем «справедливый» курс доллара/О паритете покупательной способности и индексе Бигмака</a>
+                <p class=index-descr>Добавлен этот раздел</p>
+            </li>
+            <li>
+                <span>2022-02-02</span>
+                <a href="https://onfin.github.io/notes/usdrub#_3">Обновлено: Ищем «справедливый» курс доллара/Т–Ж. Как курс рубля влияет на экономику России</a>
+                <p class=index-descr>Добавлен этот источник</p>
+            </li>
+            <li>
+                <span>2022-02-17</span>
                 <a href="https://onfin.github.io/notes/usdrub">Ищем «справедливый» курс доллара</a>
                 <p class=index-descr>Исходя из принципа паритета процентных ставок пробуем рассчитать «справедливый» курс доллара на текущий момент и понять, много ли мы «переплачиваем» за геополитичекую напряжённость, вкладываясь сейчас в зарубежные инструменты.</p>
             </li>
