--- a/notes/digital_currencies/index.html
+++ b/notes/digital_currencies/index.html
@@ -35,7 +35,7 @@
                     <p> Опубликовано: <time>2020-01-28</time> </p>
 <p>Находится в:</p>
                     <ul>
-    <a href='/notes#macro'>Заметки о финансах/Макроэкономика, денежное обращение и механика рынков</a>
+    <a href='/notes#crypto'>Заметки о финансах/Макроэкономика, денежное обращение и механика рынков/Блокчейн и криптовалюты</a>
 
     </ul>
 
@@ -43,6 +43,25 @@
             </header>
             <div class="content">                <section id="">
 <div class="meta">
+<details>
+            <summary>Используется в:</summary>
+            <ul>
+                        <li><a href='/notes/cryptoecon'>Некоторые вопросы к экономике криптовалют и блокчейнов</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Некоторые вопросы к экономике криптовалют и блокчейнов</span>
+        <span class='description'>Обработка транзакций в блокчейне всегда будет медленнее и дороже, чем в централизованной системе. Масштабирование блокчейнов происходит за счёт доверия к централизованным элементам инфраструктуры. Криптовалюты не работают ни как средство обращения (вымываются из оборота из-за ограниченности предложения), ни как средство сбережения (отсутствует привязка к реальным активам). «Честная» крипта не вытеснит фиат из-за высокой стоимости кредитов в ней. Долгосрочные проекты на блокчейнах открытого доступа невозможны из-за непредсказуемой стоимости доступа, поэтому они не в состоянии создать долговременную ценность своим криптовалютам. Будущее — за блокчейнами закрытого доступа под контролем традиционных институтов.</span>
+    </span></li>
+                        <li><a href='/notes/cryptoecon#_2'>Некоторые вопросы к экономике криптовалют и блокчейнов/Предуведомление</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Некоторые вопросы к экономике криптовалют и блокчейнов/Предуведомление</span>
+        <span class='description'></span>
+    </span></li>
+            </ul>
+        </details>
 </div>
 <p><em>Статья написана для Международной научно-практической конференции <a href="https://conf.udsu.ru/conference/bt2021">«Блокчейн технологии – 2021»</a>, г. Ижевск, УдГУ, 5-6 февраля 2021г.</em></p>
 <div><ul>
@@ -227,8 +246,15 @@
                     Категории:<a href="/categories/crypto">Криптовалюты</a>
 <a href="/categories/macro">Макроэкономика</a>
                     </div>
+                    <div>
+                        <p>Читайте далее</p>
+                        <ul>
+                                <li><a href='/notes/cryptoecon'>Некоторые вопросы к экономике криптовалют и блокчейнов</a></li>
+                                <li><a href='/notes/cryptoecon#_2'>Некоторые вопросы к экономике криптовалют и блокчейнов/Предуведомление</a></li>
+                        </ul>
+                    </div>
                     <div class="up">
-                        <span> &uarr; <a href='/notes#macro'> Заметки о финансах/Макроэкономика, денежное обращение и механика рынков</a> &uarr; </span>
+                        <span> &uarr; <a href='/notes#crypto'> Заметки о финансах/Макроэкономика, денежное обращение и механика рынков/Блокчейн и криптовалюты</a> &uarr; </span>
                     </div>
             </div>
             <aside style='display: flex'>
