--- a/updates.html
+++ b/updates.html
@@ -30,6 +30,16 @@
 
         <ul>
             <li>
+                <span>2022-02-22</span>
+                <a href="https://onfin.github.io/notes/cryptoecon">Некоторые вопросы к экономике криптовалют и блокчейнов</a>
+                <p class=index-descr>Обработка транзакций в блокчейне всегда будет медленнее и дороже, чем в централизованной системе. Масштабирование блокчейнов происходит за счёт доверия к централизованным элементам инфраструктуры. Криптовалюты не работают ни как средство обращения (вымываются из оборота из-за ограниченности предложения), ни как средство сбережения (отсутствует привязка к реальным активам). «Честная» крипта не вытеснит фиат из-за высокой стоимости кредитов в ней. Долгосрочные проекты на блокчейнах открытого доступа невозможны из-за непредсказуемой стоимости доступа, поэтому они не в состоянии создать долговременную ценность своим криптовалютам. Будущее — за блокчейнами закрытого доступа под контролем традиционных институтов.</p>
+            </li>
+            <li>
+                <span>2022-02-22</span>
+                <a href="https://onfin.github.io/literacy/instruments/crypto#links">Обновлено: Криптовалюты/Ссылки по теме</a>
+                <p class=index-descr>Перенёс ссылки в более подходящее место</p>
+            </li>
+            <li>
                 <span>2022-02-17</span>
                 <a href="https://onfin.github.io/notes/usdrub#ppp">Обновлено: Ищем «справедливый» курс доллара/О паритете покупательной способности и индексе Бигмака</a>
                 <p class=index-descr>Добавлен этот раздел</p>
@@ -65,13 +75,8 @@
                 <p class=index-descr>Актуализировал данные, добавил динамику доходности по средней максимальной ставке.</p>
             </li>
             <li>
-                <span>2022-01-21</span>
-                <a href="https://onfin.github.io/literacy/instruments/crypto#_10">Обновлено: Криптовалюты/Ссылки по теме/Артём Крумпан. Что такое Децентрализованные Финансы (DeFi)?</a>
-                <p class=index-descr>Обзор DeFi сервисов на блокчейне Терра</p>
-            </li>
-            <li>
                 <span>2022-01-14</span>
-                <a href="https://onfin.github.io/literacy/instruments/crypto#_9">Обновлено: Криптовалюты/Ссылки по теме/The Web3 Fraud</a>
+                <a href="https://onfin.github.io/notes/cryptoecon#_18">Обновлено: Некоторые вопросы к экономике криптовалют и блокчейнов/Ссылки по теме/The Web3 Fraud</a>
                 <p class=index-descr>Скорость и стоимость хранения и вычислений на блокчейне Эфира. 600КГц или 3kB/с за 250$ в секунду.</p>
             </li>
             <li>
@@ -91,12 +96,12 @@
             </li>
             <li>
                 <span>2022-01-08</span>
-                <a href="https://onfin.github.io/literacy/instruments/crypto#_7">Обновлено: Криптовалюты/Ссылки по теме/My first impressions of web3</a>
+                <a href="https://onfin.github.io/notes/cryptoecon#_16">Обновлено: Некоторые вопросы к экономике криптовалют и блокчейнов/Ссылки по теме/My first impressions of web3</a>
                 <p class=index-descr>Интересный обзор централизованности блокчейн (на примере эфира), а также незащищённости клиент-серверного взаимодействия «децентрализованных» приложений.</p>
             </li>
             <li>
                 <span>2022-01-08</span>
-                <a href="https://onfin.github.io/literacy/instruments/crypto#_8">Обновлено: Криптовалюты/Ссылки по теме/Money and Cryptocurrencies</a>
+                <a href="https://onfin.github.io/notes/cryptoecon#_17">Обновлено: Некоторые вопросы к экономике криптовалют и блокчейнов/Ссылки по теме/Money and Cryptocurrencies</a>
                 <p class=index-descr>Разбор тщеты криптовалют и их непригодности в современном виде к дальнейшему усовершенствованию денежного обращения.</p>
             </li>
             <li>
@@ -300,7 +305,7 @@
                 <p class=index-descr>Вопреки распространённому мнению, довложения в портфель увеличивают его риск в смысле неопределённости ожидаемой доходности (ну и, конечно же, никак не влияют на сам размер ожидаемой доходности)</p>
             </li>
             <li>
-                <span>2022-01-21</span>
+                <span>2022-02-22</span>
                 <a href="https://onfin.github.io/literacy/instruments/crypto">Криптовалюты</a>
                 <p class=index-descr>Разбираем экономическую сущность криптовалют и их пригодность в качестве актива в диверсифицированном портфеле. Результаты, как можно догадаться, неутешительные.</p>
             </li>
