--- a/notes/cryptoecon.html
+++ b/notes/cryptoecon.html
@@ -43,6 +43,25 @@
             </header>
             <div class="content">                <section id="">
 <div class="meta">
+<details>
+            <summary>Используется в:</summary>
+            <ul>
+                        <li><a href='/notes/intl_trade'>О международной торговле в нацвалютах</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>О международной торговле в нацвалютах</span>
+        <span class='description'>Международная торговля в нацвалютах, которая многим видится как более справедливый порядок по сравнению с использованием небольшого числа резервных валют, на самом деле скорее привела бы к повышенным издержкам, постоянным перебоям в поставках из-за курсовых рисков, повышенной узявимости и меньшей управляемости национальных экономик, валютным войнам. Мне кажется более вероятным, что сложившиеся вызовы (в том числе и для эмитентов резервных валют т.к. сопоставимый с национальной экономикой оффшорный рынок нацвалюты — серьёзная угроза для монетарной и бюджетной стабильности) приведут к активизации разработки наднациональной валюты международных расчётов, возможно, с использованием блокчейн-технологий для организации прозрачного управления ею на основе консенсуса центробанков.</span>
+    </span></li>
+                        <li><a href='/notes/intl_trade#_4'>О международной торговле в нацвалютах/Что дальше?</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>О международной торговле в нацвалютах/Что дальше?</span>
+        <span class='description'></span>
+    </span></li>
+            </ul>
+        </details>
 </div>
 <p>По мотивам обсуждения в клубе RationalAnswer: <a href="https://rationalanswer.club/post/558/">Артём Крумпан. Что такое Децентрализованные Финансы (DeFi)?</a></p>
 <div><ul>
@@ -314,6 +333,13 @@ Any given block of the Ethereum blockchain represents a maximum amount of execut
             <div class="meta"><div class=categories>
                     Категории:<a href="/categories/crypto">Криптовалюты</a>
 <a href="/categories/macro">Макроэкономика</a>
+                    </div>
+                    <div>
+                        <p>Читайте далее</p>
+                        <ul>
+                                <li><a href='/notes/intl_trade'>О международной торговле в нацвалютах</a></li>
+                                <li><a href='/notes/intl_trade#_4'>О международной торговле в нацвалютах/Что дальше?</a></li>
+                        </ul>
                     </div>
                     <div class="up">
                         <span> &uarr; <a href='/notes#crypto'> Заметки о финансах/Макроэкономика, денежное обращение и механика рынков/Блокчейн и криптовалюты</a> &uarr; </span>
