--- a/updates.html
+++ b/updates.html
@@ -30,6 +30,16 @@
 
         <ul>
             <li>
+                <span>2022-06-20</span>
+                <a href="https://onfin.github.io/notes/intl_trade">О международной торговле в нацвалютах</a>
+                <p class=index-descr>Международная торговля в нацвалютах, которая многим видится как более справедливый порядок по сравнению с использованием небольшого числа резервных валют, на самом деле скорее привела бы к повышенным издержкам, постоянным перебоям в поставках из-за курсовых рисков, повышенной узявимости и меньшей управляемости национальных экономик, валютным войнам. Мне кажется более вероятным, что сложившиеся вызовы (в том числе и для эмитентов резервных валют т.к. сопоставимый с национальной экономикой оффшорный рынок нацвалюты — серьёзная угроза для монетарной и бюджетной стабильности) приведут к активизации разработки наднациональной валюты международных расчётов, возможно, с использованием блокчейн-технологий для организации прозрачного управления ею на основе консенсуса центробанков.</p>
+            </li>
+            <li>
+                <span>2022-06-20</span>
+                <a href="https://onfin.github.io/notes/recklessness#_6">Обновлено: Безответственное отношение к деньгам/Ссылки/Experienced well-being rises with income, even above $75,000 per year</a>
+                <p class=index-descr>Исследование о логарифмической зависимлсти ощущаемого благополучия от дохода</p>
+            </li>
+            <li>
                 <span>2022-02-22</span>
                 <a href="https://onfin.github.io/notes/cryptoecon">Некоторые вопросы к экономике криптовалют и блокчейнов</a>
                 <p class=index-descr>Обработка транзакций в блокчейне всегда будет медленнее и дороже, чем в централизованной системе. Масштабирование блокчейнов происходит за счёт доверия к централизованным элементам инфраструктуры. Криптовалюты не работают ни как средство обращения (вымываются из оборота из-за ограниченности предложения), ни как средство сбережения (отсутствует привязка к реальным активам). «Честная» крипта не вытеснит фиат из-за высокой стоимости кредитов в ней. Долгосрочные проекты на блокчейнах открытого доступа невозможны из-за непредсказуемой стоимости доступа, поэтому они не в состоянии создать долговременную ценность своим криптовалютам. Будущее — за блокчейнами закрытого доступа под контролем традиционных институтов.</p>
@@ -465,7 +475,7 @@
                 <p class=index-descr>Составление личного финансового плана ничего не даёт кроме потери сил и времени (а иногда и денег, если вы ради него пошли к консультанту). Правильный подход — организовать свою финансовую систему так, чтобы она всегда и автоматически отражала ваши планы.</p>
             </li>
             <li>
-                <span>2019-10-29</span>
+                <span>2022-06-20</span>
                 <a href="https://onfin.github.io/notes/recklessness">Безответственное отношение к деньгам</a>
                 <p class=index-descr>«Мне не хватает денег». «Мне не нужны деньги». «Чтобы больше зарабатывать, нужно больше тратить». Хватает. Нужны. Нет. И не отмазывайтесь. Разбираем самые распространённые причины отказа от сбережений.</p>
             </li>
