--- a/notes/recklessness.html
+++ b/notes/recklessness.html
@@ -33,6 +33,7 @@
                 <h1> Безответственное отношение к деньгам </h1>
                 <div class="meta"><p class=summary>«Мне не хватает денег». «Мне не нужны деньги». «Чтобы больше зарабатывать, нужно больше тратить». Хватает. Нужны. Нет. И не отмазывайтесь. Разбираем самые распространённые причины отказа от сбережений.</p>
                     <p> Опубликовано: <time>2019-10-29</time> </p>
+                    <p>  Обновлено: <time>2022-06-20</time> </p>
 <p>Находится в:</p>
                     <ul>
     <a href='/literacy#persfin'>Грамотность/Личные финансы</a>
@@ -67,7 +68,7 @@
 <div class="meta">
 </div>
 <p>Если исключить случаи крайней бедности, когда приходится выбирать между едой, одеждой и коммуналкой, — это признак расточительства. Впрочем, необходимость выбирать между едой, одеждой и коммуналкой также может отсюда происходить.</p>
-<p>Если сознательно не контролировать и не ограничивать расходы — они будут только расти, пока не начнут съедать все деньги и даже больше. При этом удовольствия от жизни вам сильно не прибавится. Потому что человек чувствует лишь относительную разницу с фоном. Предположим, что расходы превращаются в качество жизни со 100%-ным КПД (что, конечно, не так, и вообще этот КПД может быть отрицательным), а ваш начальный уровнь расходов — 20Кр. И вот вы, допустим, нашли новую работу и разом их удвоили. Первое время вы чувствуете себя царём Соломоном и Цезарем Августом в одном лице, а потом оказывается, что ничего особо не изменилось, фон устаканился, воодушевление прошло. Но мозг запомнил, откуда оно берётся, хочется повторить. А чтобы повторить расходы надо вновь удваивать, нужно выйти уже на 80Кр чтобы достичь того же эффекта.</p>
+<p>Если сознательно не контролировать и не ограничивать расходы — они будут только расти, пока не начнут съедать все деньги и даже больше. При этом удовольствия от жизни вам сильно не прибавится. Потому что человек чувствует лишь относительную разницу с фоном. Предположим, что расходы превращаются в качество жизни со 100%-ным КПД (что, конечно, не так, и вообще этот КПД может быть отрицательным), а ваш начальный уровнь расходов — 20Кр. И вот вы, допустим, нашли новую работу и разом их удвоили. Первое время вы чувствуете себя царём Соломоном и Цезарем Августом в одном лице, а потом оказывается, что ничего особо не изменилось, фон устаканился, воодушевление прошло. Но мозг запомнил, откуда оно берётся, хочется повторить. А чтобы повторить расходы надо <a href="https://www.pnas.org/doi/10.1073/pnas.2016976118">вновь удваивать</a>, нужно выйти уже на 80Кр чтобы достичь того же эффекта.</p>
 <p>Дальше, без сознательного контроля, запускается <em>спираль смерти</em>. Вы ищете способы заработка, чтобы и впредь увеличивать расходы в том же темпе. Качество жизни начинает деградировать: нужно уже или слишком много работать, или слишком много рисковать, и всё это над финансовой пропастью (капитала, чтобы компенсировать провал в доходах в случае неблагоприятных обстоятельств нет — всё уходит на потребление). Стремление и этот эффект компенсировать увеличением расходов закручивает спираль ещё сильнее. Кому-то удаётся вырваться («дауншифтинг»), кто-то опускается, кто-то погибает.</p>
 <p>Беда в том, что потери человек воспринимает в полтора-два раза сильнее, чем приобретения. В нашем примере, возврат с 40Кр расходов на 20 будет восприниматься не как возвращение на исходную позицию, а как откат до 10Кр, в крайнюю бедность.</p>
 <p>В чём выход? Жить по средствам. Но жить по средствам — это не означает тратить не больше чем зарабатываешь. Это означает тратить не больше 70% от среднего ожидаемого дохода. 30% — это сбережения на случай неблагоприятных обстоятельств, лучше — больше. Среднего ожидаемого — чтобы не было мучительно больно откатываться на этот самый средний уровень после окончания обстоятельств благоприятных. И не подписываться на обязательства (социальные в том числе; демонстративное потребление — вполне себе социальное обязательство), выполнение которых может стать обременительным.</p>
@@ -93,6 +94,23 @@
 <li><strong>Самое главное.</strong> Он не улучшает финансовое положение; вы просто поднимаетесь над пропастью, чтобы больнее упасть. Ведь даже в случае успеха, ваш доход равен вашим тратам. А снижать расходы — болезненно. Физически болезненно и уничтожает морально. Т.е. вы достигли только того, что усилили свою боль при неизбежном снижении своей продуктивности. Успешный самодостаточный бизнес с таким подходом построить едва ли удастся, потому что бизнес — это про снижение издержек и разумное реинвестирование прибыли. А подход провоцирует на риск и изъятие прибыли (а то и выручки) на текущее потребление владельца.</li>
 </ol>
 <p>Что делать — очевидно: не меньше 20–30% доходов идут в сбережения сразу, рост доходов должен опережать рост расходов (в относительном измерении: скажем, на рост доходов на 20% отвечаем ростом расходов на 5–10), рискуем либо уже заработанными деньгами (но в капитал не залезаем), либо чужими (которые в случае провала не надо возвращать).</p>
+</section>
+<section id="_5">
+<h2><a href="/notes/recklessness#_5">Ссылки</a></h2>
+<div class="meta">
+</div>
+<section id="_6">
+<h3><a href="/notes/recklessness#_6">Experienced well-being rises with income, even above $75,000 per year</a></h3>
+<div class="meta">
+<a href="https://www.pnas.org/doi/10.1073/pnas.2016976118" target="_blank"><i class=share>&#xea7e;</i> Внешний источник</a><div>
+        Обновления:
+        <ul>
+                <li>2022-06-20: Исследование о логарифмической зависимлсти ощущаемого благополучия от дохода</li>
+        </ul>
+        </div>
+<p></div>
+Here, over one million real-time reports of experienced well-being from a large US sample show evidence that <em>experienced well-being rises linearly with log income</em>, with an equally steep slope above $80,000 as below it.</p>
+</section>
 </section>
 </section>
             </div>
