money_is_abstraction

--- a/updates.html
+++ b/updates.html
@@ -30,6 +30,11 @@
 
         <ul>
             <li>
+                <span>2022-07-14</span>
+                <a href="https://onfin.github.io/notes/money_is_abstraction">Деньги — это абстракция</a>
+                <p class=index-descr>Универсальность денег и их эквивалентность экономическим благам — не абсолютны. Если не обращать внимания на ресурсы, перераспределяемые с помощью денег, то очень часто можно сильно ошибиться в рассуждениях.</p>
+            </li>
+            <li>
                 <span>2022-06-20</span>
                 <a href="https://onfin.github.io/notes/intl_trade">О международной торговле в нацвалютах</a>
                 <p class=index-descr>Международная торговля в нацвалютах, которая многим видится как более справедливый порядок по сравнению с использованием небольшого числа резервных валют, на самом деле скорее привела бы к повышенным издержкам, постоянным перебоям в поставках из-за курсовых рисков, повышенной узявимости и меньшей управляемости национальных экономик, валютным войнам. Мне кажется более вероятным, что сложившиеся вызовы (в том числе и для эмитентов резервных валют т.к. сопоставимый с национальной экономикой оффшорный рынок нацвалюты — серьёзная угроза для монетарной и бюджетной стабильности) приведут к активизации разработки наднациональной валюты международных расчётов, возможно, с использованием блокчейн-технологий для организации прозрачного управления ею на основе консенсуса центробанков.</p>
