--- a/notes/intl_trade.html
+++ b/notes/intl_trade.html
@@ -35,7 +35,7 @@
                     <p> Опубликовано: <time>2022-06-20</time> </p>
 <p>Находится в:</p>
                     <ul>
-    <a href='/notes#macro'>Заметки о финансах/Макроэкономика, денежное обращение и механика рынков</a>
+    <a href='/notes#money'>Заметки о финансах/Макроэкономика, денежное обращение и механика рынков/Денежное обращение</a>
 
     </ul>
 
@@ -156,7 +156,7 @@
                     Категории:<a href="/categories/macro">Макроэкономика</a>
                     </div>
                     <div class="up">
-                        <span> &uarr; <a href='/notes#macro'> Заметки о финансах/Макроэкономика, денежное обращение и механика рынков</a> &uarr; </span>
+                        <span> &uarr; <a href='/notes#money'> Заметки о финансах/Макроэкономика, денежное обращение и механика рынков/Денежное обращение</a> &uarr; </span>
                     </div>
             </div>
             <aside style='display: flex'>
