--- a/notes/inflation.html
+++ b/notes/inflation.html
@@ -36,7 +36,7 @@
                     <p>  Обновлено: <time>2021-12-11</time> </p>
 <p>Находится в:</p>
                     <ul>
-    <a href='/notes#macro'>Заметки о финансах/Макроэкономика, денежное обращение и механика рынков</a>
+    <a href='/notes#money'>Заметки о финансах/Макроэкономика, денежное обращение и механика рынков/Денежное обращение</a>
 
     </ul>
 
@@ -254,7 +254,7 @@
                         </ul>
                     </div>
                     <div class="up">
-                        <span> &uarr; <a href='/notes#macro'> Заметки о финансах/Макроэкономика, денежное обращение и механика рынков</a> &uarr; </span>
+                        <span> &uarr; <a href='/notes#money'> Заметки о финансах/Макроэкономика, денежное обращение и механика рынков/Денежное обращение</a> &uarr; </span>
                     </div>
             </div>
             <aside style='display: flex'>
