--- a/notes/lightspeed.html
+++ b/notes/lightspeed.html
@@ -124,7 +124,7 @@
             <a href="https://www.facebook.com/sharer/sharer.php?u=/notes/lightspeed" target="_blank"><i class="share">&#xea91;</i></a>
         </div>        
             <a class="donate-button" href="/donate">Отблагодарить</a>
-          <a class="donate-button" href='https://t.me/on_fin/???' target="_blank">Комментарии <img src='/images/tg.svg' style='height: 0.7em; margin-left: -0.5ex; vertical-align: text-top'></a>
+          <a class="donate-button" href='https://t.me/on_fin/135' target="_blank">Комментарии <img src='/images/tg.svg' style='height: 0.7em; margin-left: -0.5ex; vertical-align: text-top'></a>
     </div>
             </aside>
         </article>
