--- a/notes/money_is_abstraction.html
+++ b/notes/money_is_abstraction.html
@@ -109,7 +109,7 @@
 </div>
 <p>Сейчас это расхожее утверждение среди уехавших российских программистов, а ещё не так давно схожим образом «хвалили» российских олигархов, выводящих зарубеж свои российские доходы.</p>
 <p>Но заводя деньги в страну, вы прежде всего предъявляете спрос на локальные ресурсы.
-Какая-то его часть могут быть компенсирована импортом, какая-то — нет.
+Какая-то его часть может быть компенсирована импортом, какая-то — нет.
 И не всё, что нельзя компенсировать, можно быстро произвести в требуемых объёмах.
 Что-то в принципе нельзя произвести.
 Что-то требует уверенности в стабильности нового спроса, т.к. издержки на разворачивание производства могут быть очень велики.
