--- a/updates.html
+++ b/updates.html
@@ -30,6 +30,16 @@
 
         <ul>
             <li>
+                <span>2022-10-13</span>
+                <a href="https://onfin.github.io/notes/gdp_mic">ВВП и ВПК</a>
+                <p class=index-descr>Военные расходы — не решение, а проблема.</p>
+            </li>
+            <li>
+                <span>2022-10-13</span>
+                <a href="https://onfin.github.io/notes/gdp">Тезисы о ВВП</a>
+                <p class=index-descr>Некоторые тезисы к обсуждениям ВВП.</p>
+            </li>
+            <li>
                 <span>2022-08-09</span>
                 <a href="https://onfin.github.io/notes/lightspeed">О скорости света в экономике</a>
                 <p class=index-descr>Конечная скорость распространения информации, и, следовательно, жёсткость цен — фундаментальное свойство рыночной экономики, состоящей из независимых агентов, которые координируются через близкодействующие взаимодействия. Это приводит к тому, что рыночная экономика никогда не находится в состоянии равновесия, а является средой, в которой распространяются и взаимодействуют «волны», вызванные внешними воздействиями. Поэтому её динамика существенно зависит не только от характера внешних воздействий и наложенных ограничений, но и от текущего состояния, включая «внутреннее» состояние экономических агентов. Это существенно усложняет регулирование, вплоть до того, что отложенные эффекты регулирования могут быть противоположны мгновенным, а мгновенные эффекты — противоположны желаемым. Из этого же следует неустойчивость экономики по денежному обращению: локальная избыточность/недостаточность денежной массы приводит не только к изменению уровня цен, но и к изменению объёма и структуры выпуска (вплоть до возникновения патологических самоподдерживающихся режимов). При этом, изменения, вызываемые дефицитом денежной массы, быстрее возникают, губительнее и устойчивее.</p>
